set up spacers config

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -30,13 +30,18 @@ $container-max-widths: (
   sm: 1440px
 );
 
-// prettier-ignore
-$spacers: (
-  0: 0,
-  1: .5rem,
-  // 3: 3em,
-  4: 40px,
-  6: 60px
+$spacer: 1rem !default;
+$spacers: () !default;
+$spacers: map-merge(
+  (
+    0: 0,
+    1: ($spacer * 0.25),
+    2: ($spacer * 0.5),
+    3: $spacer,
+    4: ($spacer * 1.5),
+    5: ($spacer * 3)
+  ),
+  $spacers
 );
 
 // custom configs
