--- a/src/templates/partials/course-list.twig
+++ b/src/templates/partials/course-list.twig
@@ -1,36 +1,31 @@
-<div class="course-list">
+{% set current_icon = '<span class="text-primary" title="Offered in the current term">●</span>' %}
+{% set upcoming_icon = '<span class="text-primary" title="Offered in the upcoming term">○</span>' %}
 
-  <p class="course-list__title">Courses offered in the past four years.</p>
+<ul class="list list--inline">
+  <li class="list__item">Current term {{current_icon}}</li>
+  <li class="list__item">Upcoming term(s) {{upcoming_icon}}</li>
+</ul>
 
-  {% set current_icon = '<span class="course-list__icon" title="Offered in the current term">●</span>' %}
-  {% set upcoming_icon = '<span class="course-list__icon" title="Offered in the upcoming term">○</span>' %}
+{% include 'partials/accordion.twig' with {
+  items: [
+    {
+      title: 'TRLM 8535 - Really long title lorem ipsum dolor sit amet consectetur adipisicing elit' ~ current_icon,
+      content: '<p>The purpose of this course is to familiarize students with web technologies, development and localization. We will look at
+          this topic from the point of view of the project manager, the localization engineer, and even the translator. The
+          hands-on style of this course will put students in situations that require critical thinking, risk mitigation skills
+          and solid knowledge of the web localization industry—all of which will be honed throughout this class. Specifically,
+          we will be covering the following topics: creating and localizing websites using opensource frameworks such as WordPress
+          and Drupal, web technologies such as HTML, CSS and responsive design and JavaScript, wiki technology such as MediaWiki
+          and Dokuwiki, bug tracking in Jira and The Bug Genie, and proxy localization such as Transifex and Smartling.</p>
+        <p>Fall 2017 - MIIS</p>
+        <p><a href="http://catalog.middlebury.edu/courses/view/catalog/catalog%2FMIIS/course/course%2FTRLM8535">View in Course Catalog</a></p>'
+    },
+    {
+      title: 'TRLM 8535 - Really long sit amet consectetur adipisicing elit' ~ current_icon ~ upcoming_icon,
+      content: '<p>The purpose of this course is to familiarize students with web technologies, development and localization. We will look at this topic from the point of view of the project manager, the localization engineer, and even the translator. The hands-on style of this course will put students in situations that require critical thinking, risk mitigation skills and solid knowledge of the web localization industry—all of which will be honed throughout this class. Specifically, we will be covering the following topics: creating and localizing websites using opensource frameworks such as WordPress and Drupal, web technologies such as HTML, CSS and responsive design and JavaScript, wiki technology such as MediaWiki and Dokuwiki, bug tracking in Jira and The Bug Genie, and proxy localization such as Transifex and Smartling.</p>
+        <p>Fall 2017 - MIIS</p>
+        <p><a href="http://catalog.middlebury.edu/courses/view/catalog/catalog%2FMIIS/course/course%2FTRLM8535">View in Course Catalog</a></p>'
+    }
+  ]
+} %}
 
-  <p class="course-list__meta">
-    {{current_icon}} <em>indicates offered in the current term</em><br>
-    {{upcoming_icon}} <em>indicates offered in the upcoming term(s)</em>
-  </p>
-
-  {% include 'partials/accordion.twig' with {
-    items: [
-      {
-        title: 'TRLM 8535 - Really long title lorem ipsum dolor sit amet consectetur adipisicing elit' ~ current_icon,
-        content: '<p>The purpose of this course is to familiarize students with web technologies, development and localization. We will look at
-            this topic from the point of view of the project manager, the localization engineer, and even the translator. The
-            hands-on style of this course will put students in situations that require critical thinking, risk mitigation skills
-            and solid knowledge of the web localization industry—all of which will be honed throughout this class. Specifically,
-            we will be covering the following topics: creating and localizing websites using opensource frameworks such as WordPress
-            and Drupal, web technologies such as HTML, CSS and responsive design and JavaScript, wiki technology such as MediaWiki
-            and Dokuwiki, bug tracking in Jira and The Bug Genie, and proxy localization such as Transifex and Smartling.</p>
-          <p>Fall 2017 - MIIS</p>
-          <p><a href="http://catalog.middlebury.edu/courses/view/catalog/catalog%2FMIIS/course/course%2FTRLM8535">View in Course Catalog</a></p>'
-      },
-      {
-        title: 'TRLM 8535 - Really long sit amet consectetur adipisicing elit' ~ current_icon ~ upcoming_icon,
-        content: '<p>The purpose of this course is to familiarize students with web technologies, development and localization. We will look at this topic from the point of view of the project manager, the localization engineer, and even the translator. The hands-on style of this course will put students in situations that require critical thinking, risk mitigation skills and solid knowledge of the web localization industry—all of which will be honed throughout this class. Specifically, we will be covering the following topics: creating and localizing websites using opensource frameworks such as WordPress and Drupal, web technologies such as HTML, CSS and responsive design and JavaScript, wiki technology such as MediaWiki and Dokuwiki, bug tracking in Jira and The Bug Genie, and proxy localization such as Transifex and Smartling.</p>
-          <p>Fall 2017 - MIIS</p>
-          <p><a href="http://catalog.middlebury.edu/courses/view/catalog/catalog%2FMIIS/course/course%2FTRLM8535">View in Course Catalog</a></p>'
-      }
-    ]
-  } %}
-
-</div>
