make prettier ignore sass map so it doesnt add an unnecessary return

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -32,6 +32,8 @@ $container-max-widths: (
 
 $spacer: 1rem !default;
 $spacers: () !default;
+
+// prettier-ignore
 $spacers: map-merge(
   (
     0: 0,
