remove xl from breakpoints since we arent using any classes for it

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -14,8 +14,7 @@ $grid-breakpoints: (
   xs: 0,
   sm: $screen-sm,
   md: $screen-md,
-  lg: $screen-lg,
-  xl: $screen-xl
+  lg: $screen-lg
 );
 
 // prettier-ignore
