revise page callout styles so it can have child elements. fixes #108

--- a/src/templates/t03-program.twig
+++ b/src/templates/t03-program.twig
@@ -12,7 +12,7 @@
       href: '#',
     }
   ],
-  callout_title: 'Application for Spring 2017 Now Open',
+  callout_title: '<strong>Application Deadline</strong><br>March 30',
   callout_link_url: '#',
   callout_link_text: 'Apply Now'
 } %}
