--- a/src/scss/components/_page-callout.scss
+++ b/src/scss/components/_page-callout.scss
@@ -10,22 +10,22 @@
 .page-callout__text {
   flex: 1;
   border-right: 1px solid #0bab92;
-  align-items: center;
-  display: flex;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  @include make-gutters();
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-right: map-get($grid-gutter-widths, 'xs') / 2;
+  padding-left: map-get($grid-gutter-widths, 'xs') / 2;
 
   @include media(md) {
     border-right: 0;
     padding-left: 0;
+    padding-right: 1rem;
     padding-top: 0;
     padding-bottom: 0;
   }
 }
 
 .page-callout__button {
-  flex: 0 1 auto;
+  flex-basis: auto;
   display: flex;
   align-items: center;
 
