--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -11,6 +11,7 @@ body {
   color: $body-color;
   background-color: $body-bg;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 textarea {
