--- a/src/scss/components/_story-detail.scss
+++ b/src/scss/components/_story-detail.scss
@@ -1,67 +1,10 @@
 .story-detail {
-
-}
-
-.story-detail__header {
-  @include clearfix();
-  margin-bottom: 40px;
-}
-
-.story-detail__meta {
-  margin-bottom: 20px;
-
-  @include media(md) {
-    float: left;
-    margin-bottom: 0;
-  }
-}
-
-.story-detail__share {
-  @include media(md) {
-    float: right;
-  }
-}
-
-.story-detail__pubdate {
-  color: $black;
-  font-weight: $font-weight-semibold;
-  font-family: $font-family-sans-serif;
-
-  @include media(md) {
-    font-size: 20px;
-  }
-}
-
-.story-detail__author {
-  font-family: $font-family-sans-serif;
-  @include media(md) {
-    font-size: 20px;
-  }
-}
-
-.story-detail__image {
-  margin-bottom: 60px;
-}
-
-.story-detail__caption {
-  color: $text-gray;
-  font-size: 14px;
-  margin-top: 20px;
-}
-
-.story-detail__body {
-  @include clearfix();
-
-  .typography {
-    max-width: 640px;
-  }
 }
 
 .story-detail__media-contact {
-  margin-top: 60px;
-  margin-bottom: 50px;
+  margin-bottom: $component-margin-bottom;
 }
 
 .story-detail__tags {
-  margin-bottom: 100px;
+  margin-bottom: $component-margin-bottom;
 }
