--- a/src/scss/components/_story-teaser.scss
+++ b/src/scss/components/_story-teaser.scss
@@ -7,9 +7,9 @@
 
   &.story-teaser--featured {
     display: block;
-    margin-bottom: 60px;
     border-bottom: 1px solid $border-color;
-    padding-bottom: 60px; // must be list--lg list__item padding
+    margin-bottom: $list-item-margin-bottom-lg;
+    padding-bottom: $list-item-margin-bottom-lg; // must be list--lg list__item padding
   }
 }
 
@@ -22,7 +22,7 @@
     float: none;
     padding-left: 0;
     padding-bottom: 0;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
   }
 
   @include media(md) {
@@ -42,7 +42,11 @@
 
 .story-teaser__pubdate {
   display: block;
-  font-weight: $font-weight-semibold;
+  // font-family: $font-family-serif;
+  font-size: 14px;
+  font-weight: $font-weight-medium;
+  // margin-top: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 1.5rem;
 }
 
@@ -50,16 +54,14 @@
   font-size: $h3-font-size;
   line-height: $h3-line-height;
   margin-bottom: 0.5rem;
+
+  .story-teaser--featured & {
+    font-size: $h2-font-size;
+    line-height: $h2-line-height;
+  }
 }
 
 .story-teaser__author {
-  font-family: $font-family-sans-serif;
   font-size: 14px;
-  font-weight: $font-weight-medium;
   line-height: 20px;
-  margin-bottom: 1rem;
-
-  a {
-    @include link-border();
-  }
 }
