--- a/src/templates/partials/story-teaser.twig
+++ b/src/templates/partials/story-teaser.twig
@@ -11,9 +11,9 @@
     </a>
   </div>
   <div class="story-teaser__body">
-    <time datetime="" class="story-teaser__pubdate">Jun 8, 2017</time>
     <h3 class="story-teaser__title"><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing</a></h3>
-    <p class="story-teaser__author">by <a href="#">Author Name</a></p>
+    <p class="story-teaser__author">by <a href="#" class="link-border">Author Name</a></p>
+    <time datetime="" class="story-teaser__pubdate">Jun 8, 2017</time>
     <p class="story-teaser__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae sequi sunt distinctio nostrum voluptate eveniet, repellat commodi ex suscipit rem iste provident, autem fugit doloremque delectus sed, repellendus consequatur recusandae.</p>
   </div>
 </article>
