--- a/src/scss/components/_story-detail.scss
+++ b/src/scss/components/_story-detail.scss
@@ -1,6 +1,20 @@
 .story-detail {
 }
 
+.story-detail__header {
+  margin-bottom: 2rem;
+}
+
+.story-detail__pubdate,
+.story-detail__byline {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.story-detail__pubdate {
+  margin-bottom: 1.5rem;
+}
+
 .story-detail__media-contact {
   margin-bottom: $component-margin-bottom;
 }
