--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -14,9 +14,9 @@
     <div class="row">
       <div class="col-md-push-1 col-md-7">
 
-        <header class="mb-4">
-          <p>by <a href="#" class="link-border">Michael Green</a></p>
-          <p class="mb-3"><strong><time datetime="2016-08-24T00:00:00-04:00">August 24, 2017</time></strong></p>
+        <header class="story-detail__header">
+          <p class="story-detail__byline">by <a href="#" class="link-border">Michael Green</a></p>
+          <p class="story-detail__pubdate"><time datetime="2016-08-24T00:00:00-04:00">August 24, 2017</time></p>
           {% include 'partials/share.twig' %}
         </header>
 
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-push-3 col-md-6">
+      <div class="col-md-push-1 col-md-7">
 
         {% include 'paragraphs/text.twig' %}
 
@@ -46,20 +46,9 @@
 
         {% include 'paragraphs/video.twig' %}
 
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-push-1 col-md-9">
         {% include 'paragraphs/quote.twig' %}
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-push-3 col-md-6">
+
         {% include 'paragraphs/text.twig' %}
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-push-3 col-md-6">
 
         <div class="story-detail__tags">
           <div class="d-flex">
