set link borders to currentColor so it always matches the text color

--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -6,7 +6,7 @@
 }
 
 @mixin link-border() {
-  border-bottom: 1px solid $brand-primary;
+  border-bottom: 1px solid currentColor;
   text-decoration: none;
 
   &:hover {
