finish event detail tweaks

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -14,13 +14,13 @@
       <div class="row">
 
         <div class="col-md-push-1 col-md-7">
-          <header class="mb-4" aria-labelledby="midd-event-label">
-            <div class="mb-4">
-              <p>
-                <strong><time datetime="">August 18, 2017 &middot; 4:00 PM&ndash;<br>August 19, 2017 &middot; 8:00 PM</time></strong>
+          <header class="event-detail__header" aria-labelledby="midd-event-label">
+            <div class="event-detail__meta">
+              <p class="event-detail__datetime">
+                <strong><time datetime="">August 18, 2017 &middot; 4:00 PM&ndash;August 19, 2017 &middot; 8:00 PM</time></strong>
               </p>
-              <p>TESOL Members $175; Non-members $225</p>
-              <p>Open to the Public</p>
+              <p class="event-detail__admission">TESOL Members $175; Non-members $225</p>
+              <p class="event-detail__access">Open to the Public</p>
             </div>
 
             {% include 'partials/share.twig' %}
@@ -80,6 +80,7 @@
                   <a href="tel:" class="link-border">802-555-0000</a>
                 </p>
               </div>
+
             </div>
             <div class="col-sm-6">
               <div class="mb-4">
