--- a/src/scss/components/_event-detail.scss
+++ b/src/scss/components/_event-detail.scss
@@ -1,72 +1,46 @@
 .event-detail__header {
-  @include clearfix();
-  margin-bottom: 60px;
-}
-
-.event-detail__title {
-  font-family: $font-family-sans-serif;
-  font-size: 40px;
-  margin-bottom: 40px;
-  line-height: 44px;
+  margin-bottom: 1.5rem;
 }
 
 .event-detail__meta {
-  @include media(md) {
-    float: left;
-  }
+  margin-bottom: 1.5rem;
 }
 
 .event-detail__datetime {
-  font-family: $font-family-sans-serif;
-  font-size: 20px;
-  color: $black;
-  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 0.5rem;
 }
 
 .event-detail__admission {
-  font-family: $font-family-sans-serif;
   font-size: 16px;
-  margin-bottom: 0;
   line-height: 24px;
 }
 
 .event-detail__access {
-  font-family: $font-family-sans-serif;
   font-size: 16px;
-  font-style: italic;
-  margin-bottom: 20px;
   line-height: 24px;
-
-  @include media(md) {
-    margin-bottom: 0;
-  }
 }
 
 .event-detail__share {
-  @include media(md) {
-    float: right;
-  }
 }
 
 .event-detail__media {
-  margin-bottom: 60px;
 }
 
 .event-detail__body {
-  margin-bottom: 60px;
 }
 
 .event-detail__contact {
-  margin-bottom: 60px;
+}
+
+.event-detail__address {
+  margin-bottom: 1.5rem;
 }
 
 .event-detail__meta-title {
-  font-size: 26px;
-  font-family: $font-family-sans-serif;
-  font-weight: $font-weight-semibold;
-  margin-bottom: 20px;
+  margin-bottom: 1.5rem;
 }
 
 .event-detail__text {
-  margin-bottom: 20px;
 }
