revise speaker styles

--- a/src/scss/components/_speaker.scss
+++ b/src/scss/components/_speaker.scss
@@ -1,18 +1,12 @@
 .speaker {
-  margin-bottom: 60px;
+  margin-bottom: 2rem;
 }
 
 .speaker__photo {
-  margin-bottom: 10px;
-  display: block;
+  margin-bottom: 0.5rem;
 }
 
 .speaker__name {
-  font-size: 16px;
-  font-weight: bold;
-  font-family: $font-family-sans-serif;
-  margin-bottom: 10px;
-  // line-height: 1;
 }
 
 .speaker__content {
