Add 404 page image.

--- a/src/templates/partials/hero-form.twig
+++ b/src/templates/partials/hero-form.twig
@@ -1,6 +1,6 @@
 <div class="hero-form">
   <div class="hero-form__media">
-    {% include 'partials/img.twig' with { name: 'notfound' } %}
+    <img src="images/404-1440x810.jpg" srcset="images/404-400x225.jpg 400w,images/404-640x360.jpg 640w,images/404-960x540.jpg 960w,images/404-1280x720.jpg 1280w,images/404-1440x810.jpg 1440w" sizes="(max-width: 1440px) 100vw, 1440px" alt="" />
   </div>
   <div class="hero-form__content">
     <div class="container">
