--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -100,6 +100,12 @@
 .button--tertiary {
   background-color: $brand-primary;
   color: $white;
+
+  &:hover,
+  &:focus {
+    background-color: $green-light;
+    color: $brand-primary;
+  }
 }
 
 // Elements
