create event-card for related events column view

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,6 +37,7 @@
 @import 'components/event-detail';
 @import 'components/event-teaser-lite';
 @import 'components/event-teaser';
+@import 'components/event-card';
 @import 'components/faq';
 // @import 'components/filter';
 @import 'components/footer-callout';
