--- a/src/templates/paragraphs/related-events.twig
+++ b/src/templates/paragraphs/related-events.twig
@@ -14,7 +14,7 @@
             <div class="border-b border-md-b-0 pb-4 pb-md-0">
           {% endif %}
 
-            {% include 'partials/card.twig' with {
+            {% include 'partials/event-card.twig' with {
               image: true,
               title: 'Middlebury Institute’s TESOL/TFL Program: Innovations in Language Learning',
               date: 'September 24, 2017',
