tweak event list page

--- a/src/templates/partials/sidebar-search.twig
+++ b/src/templates/partials/sidebar-search.twig
@@ -1,18 +1,16 @@
-<div class="sidebar-search">
-  <form action="" class="form">
-    <div class="input-group">
-      <div class="input-group__field">
-        <label for="midd-sidebar-search" class="sr-only">Search Events</label>
-        <input type="search" placeholder="Search events" id="midd-sidebar-search" class="form__control sidebar-search__control" required>
-      </div>
-      <div class="input-group__button">
-        <button type="submit" class="button button--secondary sidebar-search__button">
-          <span class="sr-only">Search</span>
-          <svg class="icon" aria-hidden="true">
-            <use xlink:href="#icon-search" />
-          </svg>
-        </button>
-      </div>
+<form action="" class="form mb-3">
+  <div class="input-group">
+    <div class="input-group__field">
+      <label for="midd-sidebar-search" class="sr-only">Search Events</label>
+      <input type="search" placeholder="Search events" id="midd-sidebar-search" class="form__control" required>
     </div>
-  </form>
-</div>
+    <div class="input-group__button">
+      <button type="submit" class="button">
+        <span class="sr-only">Search</span>
+        <svg class="icon" aria-hidden="true">
+          <use xlink:href="#icon-search" />
+        </svg>
+      </button>
+    </div>
+  </div>
+</form>
