--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,7 +33,7 @@
 @import 'components/card';
 @import 'components/carousel';
 @import 'components/chart';
-@import 'components/drawer';
+// @import 'components/drawer';
 @import 'components/event-detail';
 @import 'components/event-teaser-lite';
 @import 'components/event-teaser';
