use top level image style for audience page
should really delete this file or change to audience content type name

--- a/src/templates/t16-info-for-students.twig
+++ b/src/templates/t16-info-for-students.twig
@@ -9,12 +9,7 @@
 
 {% block page %}
 
-  <div class="mb-6 text-right">
-    <figure>
-      {% include 'partials/img.twig' with { name: 'top_level' } %}
-      <figcaption class="media__caption">some caption for the image</figcaption>
-    </figure>
-  </div>
+  {% include 'partials/page-image-full.twig' %}
 
   <div class="container">
     <div class="row">
