--- a/src/templates/t19b-profile-list.twig
+++ b/src/templates/t19b-profile-list.twig
@@ -34,7 +34,7 @@
 
   <article class="profile-listing">
 
-    <div class="typography">
+    <div class="text typography">
       <p>Currently we have 160 full-time, adjunct, part-time, and visiting faculty members. They are a diverse group. Many of our faculty are from countries outside the United States and all have lived abroad. They bring interdisciplinary focus and international business experience as well as research interests. They also bring a genuine, demonstrable commitment to the success of our students. Dedicated to working with and guiding students, they become mentors, advisors, and friends.</p>
     </div>
 
