--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -15,7 +15,7 @@
       <div class="col-md-push-1 col-md-7">
 
         <header class="story-detail__header">
-          <p class="story-detail__byline">by <a href="#" class="link-border">Michael Green</a></p>
+          <p class="story-detail__author">by <a href="#" class="link-border">Michael Green</a></p>
           <p class="story-detail__pubdate"><time datetime="2016-08-24T00:00:00-04:00">August 24, 2017</time></p>
           {% include 'partials/share.twig' %}
         </header>
